--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -7,16 +7,29 @@
         android:layout_height="match_parent"
         tools:context=".activities.ChatRoomActivity">
 
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:title="聊天室"
+            app:titleTextColor="@android:color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:navigationIcon="@drawable/baseline_arrow_back_24"/>
+
+
     <TextView
             android:id="@+id/titleview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="当前无在线用户"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:gravity="center"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
             android:id="@+id/btn_startServer"
@@ -56,6 +69,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="5dp"
                 android:ems="12"
                 android:hint="请输入消息"
                 android:inputType="textPersonName"/>
