消息旁边添加头像和用户名 先显示时间后显示消息

--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -90,6 +90,7 @@
 
     </LinearLayout>
 
+
     <ListView
             android:id="@+id/showmsg"
             android:layout_width="0dp"
@@ -100,6 +101,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleview"
             android:transcriptMode="alwaysScroll"
-            android:divider="#00000000"/>
+            android:divider="#00000000"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
