--- a/app/src/main/res/layout/chart_item.xml
+++ b/app/src/main/res/layout/chart_item.xml
@@ -1,87 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/itemleft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/item_left"
-        android:gravity="center" />
-
-    <TextView
-        android:id="@+id/itemtimeleft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/itemleft"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"
-        android:textColor="#A7A9AA"/>
-
-    <TextView
-        android:id="@+id/itemright"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/item_right" />
-
-    <TextView
-        android:id="@+id/itemtimeright"
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/itemright"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"
-        android:textColor="#A7A9AA"/>
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/rightimg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"/>
-
-    <ImageView
-        android:id="@+id/leftimg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"/>
-
+    <!-- 右侧用户名 -->
     <TextView
-        android:id="@+id/rightimgtime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/rightimg"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#A7A9AA"/>
+            android:id="@+id/usernameRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="20dp"
+            android:text="unknown"
+            android:textColor="#A7A9AA"
+            android:textSize="14sp"/>
 
+    <!-- 右侧头像 -->
+    <ImageView
+            android:id="@+id/avatarRight"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/usernameRight"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/cc_face"/>
+
+    <!-- 左侧用户名 -->
     <TextView
-        android:id="@+id/leftimgtime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/leftimg"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#A7A9AA"/>
+            android:id="@+id/usernameLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:text="unknown"
+            android:textColor="#A7A9AA"
+            android:textSize="14sp"/>
+
+    <!-- 左侧头像 -->
+    <ImageView
+            android:id="@+id/avatarLeft"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/usernameLeft"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/cc_face"/>
+
+
+    <!-- 右侧消息的时间 -->
+    <TextView
+            android:id="@+id/itemtimeright"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:textColor="#A7A9AA"/>
+
+    <!-- 右侧的消息文本 -->
+    <TextView
+            android:id="@+id/itemright"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/itemtimeright"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/item_right"/>
+
+    <!-- 右侧图片的时间 -->
+    <TextView
+            android:id="@+id/rightimgtime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rightimg"
+            android:gravity="center"
+            android:textColor="#A7A9AA"/>
+
+    <!-- 右侧的图片 -->
+    <ImageView
+            android:id="@+id/rightimg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/itemtimeright"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"/>
+
+
+    <!-- 左侧消息的时间 -->
+    <TextView
+            android:id="@+id/itemtimeleft"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:textColor="#A7A9AA"/>
+
+    <!-- 左侧的消息文本 -->
+    <TextView
+            android:id="@+id/itemleft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/itemtimeleft"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="50dp"
+            android:background="@drawable/item_left"/>
+
+
+    <!-- 左侧图片的时间 -->
+    <TextView
+            android:id="@+id/leftimgtime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/leftimg"
+            android:gravity="center"
+            android:textColor="#A7A9AA"/>
+
+    <!-- 左侧的图片 -->
+    <ImageView
+            android:id="@+id/leftimg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/itemtimeleft"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"/>
+
 
 </RelativeLayout>
