--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -13,16 +13,72 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:title="通讯录"
-            app:titleTextColor="@color/white"
             android:background="@color/primary"
+            app:title="视频通话"
+            app:titleTextColor="@color/white"
     />
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
+            android:id="@+id/messageTextView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="这是通讯录"
-            android:textSize="24sp"/>
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:padding="26dp"
+            android:textColor="@color/primary"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:text="欢迎来到视频通话！"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintWidth_percent="0.8"
+                app:layout_constraintHeight_percent="0.8"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+            <!--android:src="@mipmap/ic_launcher"-->
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/cc_face2" />
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="1.0">
+
+
+        <Button
+                android:id="@+id/btn_startVideoChat"
+                android:layout_width="300dp"
+                android:layout_height="100dp"
+                android:text="开始视频聊天！"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+    </LinearLayout>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
