--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -66,6 +66,21 @@
             android:textColor="@color/primary_text"
             android:textSize="@dimen/_13ssp" />
 
+        <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="left"
+                android:text="记住密码"
+                android:textSize="15sp"
+                tools:ignore="RtlHardcoded"/>
+
+
+
+
+
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonSignIn"
             android:layout_width="match_parent"
@@ -78,6 +93,7 @@
             app:cornerRadius="@dimen/_8sdp" />
 
 
+
         <TextView
             android:id="@+id/textCreateNewAccount"
             android:layout_width="wrap_content"
@@ -87,6 +103,9 @@
             android:textColor="@color/primary"
             android:textSize="@dimen/_13ssp"
             android:textStyle="bold" />
+
+
+
 
 
     </LinearLayout>
