--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -32,7 +32,7 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+<!--    <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -40,17 +40,25 @@
             app:cardCornerRadius="25dp"
     >
 
-<!--        android:src="@drawable/baseline_android_24"-->
+&lt;!&ndash;        android:src="@drawable/baseline_android_24"&ndash;&gt;
         <ImageView
                 android:layout_width="210dp"
                 android:layout_height="210dp"
                 android:src="@drawable/cc_face"
         />
 
-    </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>-->
+
+    <com.youth.banner.Banner
+            android:id="@+id/banner"
+            android:layout_marginTop="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+    />
+
 
     <TextView
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="100dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
