--- a/app/src/main/res/layout/input_token.xml
+++ b/app/src/main/res/layout/input_token.xml
@@ -8,17 +8,17 @@
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:background="@color/primary"
-            android:text="开启服务器"
+            android:text="输入Token"
             android:textColor="#FFFFFF"
             android:gravity="center"
             android:textSize="24dp"
             android:textStyle="bold"
             android:scaleType="center"/>
     <EditText
-        android:id="@+id/editPort"
+        android:id="@+id/editToken"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="请输入端口号"
+        android:hint="请输入Token"
         android:gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
