--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -15,8 +15,10 @@
             android:layout_height="wrap_content"
             android:background="@color/primary"
             app:title="视频通话"
-            app:titleTextColor="@color/white"
-    />
+            app:titleTextColor="@color/white">
+
+
+    </androidx.appcompat.widget.Toolbar>
 
 
     <TextView
@@ -55,30 +57,32 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <LinearLayout
-            android:layout_marginTop="20dp"
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="1.0">
-
+            android:layout_height="match_parent">
 
         <Button
+                android:layout_marginTop="30dp"
                 android:id="@+id/btn_startVideoChat"
                 android:layout_width="300dp"
                 android:layout_height="100dp"
                 android:text="开始视频聊天！"
                 android:textSize="30dp"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:layout_centerHorizontal="true" />
 
-    </LinearLayout>
+        <TextView
+                android:id="@+id/tv_inputToken"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="输入Token"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_below="@id/btn_startVideoChat"
+                android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
