--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -102,6 +102,18 @@
             android:textStyle="bold" />
 
 
+        <TextView
+                android:id="@+id/goWelcome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="100dp"
+                android:text="我要看广告"
+                android:textColor="@color/input_background"
+                android:textSize="10dp"
+                android:textStyle="bold"/>
+
+
 
 
 
