--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -39,8 +39,8 @@
             app:menu="@menu/navigation"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/_10sdp"
+            android:layout_height="70dp"
+
 
             android:layout_marginBottom="0dp"/>
 
