--- a/app/src/main/res/layout/activity_video_chat.xml
+++ b/app/src/main/res/layout/activity_video_chat.xml
@@ -19,19 +19,18 @@
             android:id="@+id/remote_video_view_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             android:background="@android:color/white"/>
 
     <FrameLayout
             android:id="@+id/local_video_view_container"
             android:layout_width="160dp"
             android:layout_height="160dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:background="@android:color/darker_gray"
-            tools:ignore="MissingConstraints"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
