--- a/app/src/main/res/layout/activity_video_chat.xml
+++ b/app/src/main/res/layout/activity_video_chat.xml
@@ -32,5 +32,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+    <ImageButton
+            android:id="@+id/btn_switch_camera"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/baseline_change_circle_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="400dp"
+            android:padding="10dp"
+            android:contentDescription="切换前后置摄像头"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
