--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="哦哈呦，学妹！"
+            android:text="你好！"
             android:textSize="50dp"
             android:textStyle="bold"
             android:textColor="@color/primary"/>
